--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start:prod": "npm run build && node dist/index.js",
-    "start": "ts-node src/index.ts",
+    "start": "ts-node src/app/server.ts",
+    "start:nodemon": "nodemon src/app/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "lint": "eslint --max-warnings 0 . --ext .ts"
@@ -29,5 +30,10 @@
     "eslint": "7.32.0",
     "ts-node": "10.2.1",
     "typescript": "4.4.3"
+  },
+  "dependencies": {
+    "D": "^1.0.0",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.15"
   }
 }
