--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "@typescript-eslint/parser": "4.32.0",
     "eslint": "7.32.0",
     "ts-node": "10.2.1",
-    "typescript": "4.4.3"
+    "typescript": "4.4.3",
+    "nodemon": "2.0.15"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "nodemon": "^2.0.15"
+    "express": "4.17.1"
   }
 }
