--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start:prod": "npm run build && node dist/index.js",
     "start": "ts-node src/app/server.ts",
     "start:nodemon": "nodemon src/app/server.ts",
+    "start:films": "nodemon src/films-api/films.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "lint": "eslint --max-warnings 0 . --ext .ts"
@@ -28,9 +29,9 @@
     "@typescript-eslint/eslint-plugin": "4.32.0",
     "@typescript-eslint/parser": "4.32.0",
     "eslint": "7.32.0",
+    "nodemon": "2.0.15",
     "ts-node": "10.2.1",
-    "typescript": "4.4.3",
-    "nodemon": "2.0.15"
+    "typescript": "4.4.3"
   },
   "dependencies": {
     "express": "4.17.1"
